# trainer-tools

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml  tests.yml
docs/: index.md
docs/guides/: custom_hooks.md  tracking_metrics.md  train_eval.md
docs/reference/: hooks_builtin.md  hooks_metrics.md  trainer.md
guides/custom_hooks/: index.html
guides/tracking_metrics/: index.html
guides/train_eval/: index.html
reference/hooks_builtin/: index.html
reference/hooks_metrics/: index.html
reference/trainer/: index.html
scripts/: benchmark.py  test_integration.py
search/: search_index.json
tests/: conftest.py  test_accelerate.py  test_checkpoint.py  test_grad_accum.py  test_metrics.py  test_trainer.py
trainer_tools/: all.py  checkpoint.py  eval.py  imports.py  logging.py  trainer.py  utils.py
trainer_tools/hooks/: __init__.py  accelerate.py  base.py  checkpoint.py  ema.py  metrics.py  optimization.py  pbar.py  profiler.py  transforms.py  utils.py
trainer_tools/hooks/metrics/: __init__.py  base.py  lr_stats.py  metrics_hook.py  throughput.py
trainer_tools/metrics/: __init__.py  base.py  lr.py
