[project]
authors = [
    { name = "Slava Chaunin", email = "67190162+Ssslakter@users.noreply.github.com" },
]
description = "Small utilities to simplify trainining of PyTorch models."
dependencies = [
    "torch>=2.7",
    "numpy",
    "matplotlib",
    "tqdm",
    "trackio",
    "hydra-core",
    "wandb",
]
name = "trainer-tools"
readme = "README.md"
requires-python = ">= 3.11"
version = "0.1.2"
license = { file = "LICENSE" }
keywords = ["pytorch", "deep-learning", "training", "trainer"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
[project.urls]
"Repository" = "https://github.com/ssslakter/trainer-tools"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
trainer-tools = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }

[tool.pixi.tasks]

[tool.black]
line-length = 120

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_parser = "conventional"
allow_zero_version = true
major_on_zero = false

[tool.semantic_release.commit_parser_options]
allowed_tags = ["patch", "major", "minor", "breaking", "fix", "feat"]
major_tags = ["major", "breaking"]
minor_tags = ["minor", "feat"]
patch_tags = ["fix", "patch"]
default_bump_level = 0

[dependency-groups]
dev = ["jupyter", "pytest", "memray", "build", "twine", "python-semantic-release"]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-autorefs"
]
