[project]
authors = [
    { name = "Slava Chaunin", email = "67190162+Ssslakter@users.noreply.github.com" },
]
description = "Small utilities to simplify trainining of PyTorch models."
dependencies = [
    "torch>=2.2,<2.10",
    "numpy",
    "matplotlib",
    "tqdm",
    "trackio",
    "hydra-core",
    "wandb",
    "accelerate>=1.12.0,<2",
]
name = "trainer-tools"
readme = "README.md"
requires-python = ">= 3.11"
version = "0.1.4"
license = { file = "LICENSE" }
keywords = ["pytorch", "deep-learning", "training", "trainer"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
[project.urls]
"Repository" = "https://github.com/ssslakter/trainer-tools"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64", "osx-64"]

[tool.pixi.target.osx-64.dependencies]
python = "<3.13"

[tool.pixi.pypi-dependencies]
trainer-tools = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }

[tool.black]
line-length = 120

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_parser = "conventional"
allow_zero_version = true
major_on_zero = false

[tool.semantic_release.commit_parser_options]
allowed_tags = ["patch", "minor", "fix", "feat"]
minor_tags = ["minor", "feat"]
patch_tags = ["fix", "patch"]
default_bump_level = 0

[dependency-groups]
dev = [
    "jupyter",
    "pytest",
    "memray",
    "build",
    "twine",
    "python-semantic-release",
]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings[python]", "mkdocs-autorefs"]
