[project]
authors = [
    { name = "Slava Chaunin", email = "67190162+Ssslakter@users.noreply.github.com" },
]
description = "Small utilities to simplify trainining of PyTorch models."
dependencies = ["torch>=2.2,<3", "numpy", "matplotlib", "tqdm", "omegaconf"]
name = "trainer-tools"
readme = "README.md"
requires-python = ">= 3.11"
version = "0.4.2"
license = { file = "LICENSE" }
keywords = ["pytorch", "deep-learning", "training", "trainer"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
wandb = ["wandb"]
trackio = ["trackio"]
hydra = ["hydra-core"]
mlop = ["mlop"]
accelerate = ["accelerate>=1.12.0,<2"]
core = ["accelerate>=1.12.0,<2", "trackio", "hydra-core"]
all = ["wandb", "trackio", "hydra-core", "mlop", "accelerate>=1.12.0,<2"]


[project.urls]
"Repository" = "https://github.com/ssslakter/trainer-tools"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64", "osx-64", "osx-arm64"]

[tool.pixi.target.osx-64.dependencies]
python = "<3.13"

[tool.pixi.pypi-dependencies]
trainer-tools = { path = ".", editable = true, extras = ["core"] }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }
v100 = { features = ["v100"], solve-group = "dev" }

[tool.pixi.feature.v100.pypi-dependencies]
torch = { version = ">=2.5", index = "https://download.pytorch.org/whl/cu121" }

[tool.pixi.feature.v100]
platforms = ["linux-64"]
dependencies = {python = "<3.14"}

[tool.pytest.ini_options]
filterwarnings = ["ignore:The pynvml package is deprecated:FutureWarning"]

[tool.ruff]
line-length = 120

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_parser = "conventional"
allow_zero_version = true
major_on_zero = false

[tool.semantic_release.commit_parser_options]
allowed_tags = ["patch", "minor", "fix", "feat", "release"]
minor_tags = ["minor", "feat"]
patch_tags = ["fix", "patch", "release"]
default_bump_level = 0

[dependency-groups]
dev = [
    "jupyter",
    "pytest",
    "memray",
    "build",
    "twine",
    "python-semantic-release",
    "ruff",
]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings[python]", "mkdocs-autorefs"]
